--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "debug": "~2.2.0",
     "ejs": "^2.5.6",
     "express": "~4.13.4",
+    "express-ejs-extend": "0.0.1",
     "mongodb": "^2.2.26",
     "morgan": "~1.7.0",
     "serve-favicon": "~2.3.0"
